# 13xengineer

./: .gitignore  CLAUDE.md  README.md
.claude/: blog-ideas.md
.claude/agents/: blog-ideator.md  blog-outliner.md  blog-researcher.md  blog-writer.md
.claude/commands/: blog-check-images.md  blog-ideate.md  blog-outline.md  blog-research.md  blog-seo-check.md  blog-write.md  blog.md
.claude/docs/: legora-features.md
.claude/hooks/: validate-blog.sh
.claude/rules/: blog-seo.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/agents/: article.py  base.py  code_pr.py  improvement.py  registry.py  video.py
backend/app/routers/: agents.py  companies.py  jobs.py  ping.py  repos.py
backend/app/scripts/: connect_peec.py  probe_mcp.py
backend/app/services/: company_match.py  git_ops.py  jobs.py  mock_reports.py  peec_actions.py  peec_mcp.py  peec_oauth.py  peec_rest.py  resolve.py  site_intel.py  tavily.py
backend/fixtures/: legora_actions.json
backend/tests/: conftest.py  test_agents_router.py  test_code_pr_agent.py  test_git_ops.py  test_improvement_agent.py  test_repos_router.py
docs/: frontend-integration.md
docs/superpowers/specs/: 2026-04-25-felix-backend-design.md  2026-04-26-actions-feed-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionCard.tsx  ActionFeed.tsx  (+20 more)
scripts/: convert-blog-images-to-webp.ts  generate-blog-image-standalone.mjs  generate-blog-image.ts
(+27 files in other folders)
